--- a/module-code/app/securesocial/views/login.scala.html
+++ b/module-code/app/securesocial/views/login.scala.html
@@ -1,8 +1,8 @@
 @(providers: Iterable[securesocial.core.IdentityProvider], loginForm: Form[(String,String)], errorMsg: Option[String] = None)
 
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(securesocial.views.html.inputFieldConstructor.f) }
-
+@implicitFieldConstructor = @{ FieldConstructor(securesocial.views.html.customInputFieldConstructor.f) }
+@import securesocial.core.{SocialUser,UserId,AuthenticationMethod}
 @main(Messages("securesocial.login.title")) {
     <div class="page-header">
         <h1>Login</h1>
@@ -14,47 +14,32 @@
         </div>
     }
 
-    <!--<div class="clearfix">-->
-        <!--<p>@Messages("securesocial.login.instructions")</p>-->
-
-        <!--<p>-->
-            <!--@for(p <- providers if p.authMethod != securesocial.core.AuthenticationMethod.UserPassword) {-->
-                <!--@defining( "images/providers/%s.png".format(p.providerId) ) { imageUrl =>-->
-                    <!--<a href="@p.authenticationUrl"><img src="@routes.Assets.at(imageUrl)"/></a>-->
-                <!--}-->
-            <!--}-->
-        <!--</p>-->
-    <!--</div>-->
-
     <div class="clearfix">
         <p>@Messages("securesocial.login.useEmailAndPassword")</p>
 
-        @helper.form(action = securesocial.controllers.routes.LoginPage.authenticateByPost("userpass"), 'class -> "form-horizontal",  'autocomplete -> "off") {
+        <form method="POST" action="@securesocial.controllers.routes.LoginPage.authenticateByPost("userpass")" class="form-horizontal" autocomplete="off">
             <fieldset>
+                <label class="control-label" for="username">@Messages("securesocial.signup.username")</label>
+                @helper.input(loginForm("username")) { (id, name, value, args) =>
+                    <input type="text" id="@id" name="@name" value="@value" class="input-xlarge" @toHtmlArgs(args)>
+                }
 
-                @helper.inputText(
-                loginForm("username"),
-                '_label -> Messages("securesocial.signup.username"),
-                'class -> "input-xlarge"
-                )
-
-                @helper.inputPassword(
-                loginForm("password"),
-                '_label -> Messages("securesocial.signup.password1"),
-                'class -> "input-xlarge"
-                )
+                <label class="control-label" for="password">@Messages("securesocial.signup.password1")</label>
+                @helper.input(loginForm("password")) { (id, name, value, args) =>
+                    <input type="password" id="@id" name="@name" value="@value" class="input-xlarge" @toHtmlArgs(args)>
+                }
 
                 <div class="form-actions">
                     <button type="submit" class="btn btn-primary">@Messages("securesocial.button.login")</button>
                     <a class="btn" href="@securesocial.controllers.routes.LoginPage.login()">@Messages("securesocial.signup.cancel")</a>
                 </div>
-
             </fieldset>
-        }
+        </form>
     </div>
 
 
     <div class="clearfix">
-        <p>@Messages("securesocial.login.signUp") <a href="@securesocial.controllers.routes.Registration.signUp()">@Messages("securesocial.login.here")</a></p>
+        @* TODO: Trying to get the path to /signup is not working: securesocial.controllers.routes.Registration.signUp()*@
+        <p>@Messages("securesocial.login.signUp") <a href="@Messages("securesocial.signup.url")">@Messages("securesocial.login.here")</a></p>
     </div>
 }
