--- a/module-code/app/securesocial/views/login.scala.html
+++ b/module-code/app/securesocial/views/login.scala.html
@@ -17,16 +17,16 @@
     <div class="clearfix">
         <p>@Messages("securesocial.login.useEmailAndPassword")</p>
 
-        <form method="POST" action="@securesocial.controllers.routes.LoginPage.authenticateByPost("userpass")" class="form-horizontal" autocomplete="off">
+        <form id="loginForm" method="POST" action="@securesocial.controllers.routes.LoginPage.authenticateByPost("userpass")" class="form-horizontal" autocomplete="off">
             <fieldset>
-                <label class="control-label" for="username">@Messages("securesocial.signup.username")</label>
+                <label class="control-label" for="username">@Messages("securesocial.signup.username")*</label>
                 @helper.input(loginForm("username")) { (id, name, value, args) =>
-                    <input type="text" id="@id" name="@name" value="@value" class="input-xlarge" @toHtmlArgs(args)>
+                    <input type="text" id="@id" name="@name" value="@value" class="required" minlength="4" @toHtmlArgs(args)>
                 }
 
-                <label class="control-label" for="password">@Messages("securesocial.signup.password1")</label>
+                <label class="control-label" for="password">@Messages("securesocial.signup.password1")*</label>
                 @helper.input(loginForm("password")) { (id, name, value, args) =>
-                    <input type="password" id="@id" name="@name" value="@value" class="input-xlarge" @toHtmlArgs(args)>
+                    <input type="password" id="@id" name="@name" value="@value" class="required" minlength="4" @toHtmlArgs(args)>
                 }
 
                 <div class="form-actions">
@@ -42,4 +42,6 @@
         @* TODO: Trying to get the path to /signup is not working: securesocial.controllers.routes.Registration.signUp()*@
         <p>@Messages("securesocial.login.signUp") <a href="@Messages("securesocial.signup.url")">@Messages("securesocial.login.here")</a></p>
     </div>
+    <script src="@routes.Assets.at("javascripts/jquery.validate.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/login.validate.js")" type="text/javascript"></script>
 }
