--- a/module-code/app/securesocial/views/login.scala.html
+++ b/module-code/app/securesocial/views/login.scala.html
@@ -26,8 +26,15 @@
 
                 <label class="control-label" for="password">@Messages("securesocial.signup.password1")*</label>
                 @helper.input(loginForm("password")) { (id, name, value, args) =>
-                    <input type="password" id="@id" name="@name" value="@value" class="required" minlength="4" @toHtmlArgs(args)>
+                    <input type="password" id="@id" name="@name" value="@value" class="required" minlength="6" @toHtmlArgs(args)>
                 }
+
+                <!--<label class="control-label" for="email">Email</label>-->
+                <!--<div class="control-group" id="email_field">-->
+                    <!--<div class="controls">-->
+                    <!--<input type="email" id="email" name="email" class="required">-->
+                    <!--</div>-->
+                <!--</div>-->
 
                 <div class="form-actions">
                     <button type="submit" class="btn btn-primary">@Messages("securesocial.button.login")</button>
@@ -43,5 +50,6 @@
         <p>@Messages("securesocial.login.signUp") <a href="@Messages("securesocial.signup.url")">@Messages("securesocial.login.here")</a></p>
     </div>
     <script src="@routes.Assets.at("javascripts/jquery.validate.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/login.validate.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/input.validate.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/jquery.maskedinput-1.3.min.js")" type="text/javascript"></script>
 }
