Adding delegates to LoginPage

--- a/module-code/app/securesocial/views/login.scala.html
+++ b/module-code/app/securesocial/views/login.scala.html
@@ -5,7 +5,7 @@
 @import securesocial.core.{SocialUser,UserId,AuthenticationMethod}
 @main(Messages("securesocial.login.title")) {
     <div class="page-header">
-        <h1>Login</h1>
+        <h1>Login original</h1>
     </div>
 
     @errorMsg.map { msg =>
